--- a/src/index.hbs
+++ b/src/index.hbs
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>@jomrcr | Joe Mercer</title>
-    <meta name="description" content="Joe Mercer - student of Mathematics at the University of Waterloo - data science intern at Facebook"/>
+    <title>Joe Mercer | @jomrcr</title>
+    <meta name="description" content="Joe Mercer - Studying Mathematics at the University of Waterloo. Data Scientist at Facebook. Living in SF. From Redmond. Tweet @jomrcr."/>
     <link rel="author" content="Joe Mercer" href="{{twitter}}"/>
 
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
