fixes for mobile

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -161,7 +161,7 @@
           <li>Experiences on <a href="https://www.linkedin.com/in/jomrcr" target="_blank" class="rainbow">LinkedIn</a></li>
         </ul>
 
-        <h4 class="copyright">Made with &#9829; in Seattle by Joe. &#169; 2015 Joe Mercer.</h4>
+        <h4 class="copyright">Made with &#9829; in Seattle. &#169; 2015 Joe Mercer.</h4>
       </div>
     </footer>
 
