--- a/src/styles/date-img.less
+++ b/src/styles/date-img.less
@@ -89,3 +89,17 @@
 		}
   }
 }
+
+.mobile.ios .date-img {
+	.date {
+		opacity: 1;
+	}
+	.underline {
+	  opacity: .9;
+	}
+	img {
+		filter: none;
+		filter: none;
+	  -webkit-filter: none;
+	}
+}
