--- a/src/styles/icon.less
+++ b/src/styles/icon.less
@@ -44,10 +44,10 @@
 
 .mobile {
 	.icon-container {
-		height: 50%;
+		height: 325px;
 		width: 100%;
 		margin-top: 100px;
-		margin-bottom: 100px;
+		margin-bottom: 50px;
 	}
 }
 
