added most recent fb internship

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -44,6 +44,7 @@
         <p>My studies and internships have taken me around the <b class="colorful">world</b>. I've studied abroad in Hong Kong, and worked in Seattle, NYC, SF, and Austin.</p>
 
         <div class="map-container">
+          <span class="dot rainbow menlopark"></span>
           <span class="dot rainbow seattle"></span>
           <span class="dot rainbow hk"></span>
           <span class="dot rainbow nyc"></span>
@@ -57,6 +58,20 @@
 
         <h2><a href="mailto:{{email}}?subject=Hello!" class="rainbow">Come say hello :)</a></h2>
 
+        <div class="menlopark-header date-img fade blank">
+          <h2 class="date">Fall 2015 - Menlo Park</h2>
+          <div class="underline"></div>
+          <img class="lazy" data-src="images/menlopark.jpg" src="images/blank.gif" alt="Menlo Park" />
+        </div>
+
+        <p>Most recently I was interning at Instagram/Facebook as a data scientist. I analyzed low-engaged users and used the insights to help guide product. I also visited the office in Japan!</p>
+
+        <ul>
+          <li><a href="https://www.instagram.com/p/BATgVZ7iIUF/?taken-by=jomrcr" target="_blank" class="rainbow">Japan!</a></li>
+          <li><a href="http://jomrcr.svbtle.com/analysis-hotel-rayman-allan-rayman" target="_blank" class="rainbow">Rap</a></li>
+          <li>Surfing</li>
+        </ul>
+
         <div class="seattle-header date-img fade blank">
           <h2 class="date">Winter 2015 - Seattle</h2>
           <div class="underline"></div>
@@ -66,7 +81,7 @@
         <p>I was interning at Microsoft as a program manager on the Xbox Live Services team. While there I helped design the Xbox Live experience of community managers and other high frequency users.</p>
 
         <ul>
-          <li><a href="http://jomrcr.svbtle.com/notes-the-toyota-way" target="_blank" class="rainbow">Business</a></li>
+          <li><a href="http://jomrcr.svbtle.com/notes-the-toyota-way" target="_blank" class="rainbow">Manufacturing</a></li>
           <li><a href="http://jomrcr.svbtle.com/notes-the-design-of-everyday-things" target="_blank" class="rainbow">Design</a></li>
           <li><a href="https://github.com/joemercer/tether" target="_blank" class="rainbow">Family</a></li>
         </ul>
