--- a/src/styles/map.less
+++ b/src/styles/map.less
@@ -23,6 +23,11 @@
   cursor: pointer;
 }
 
+.menlopark {
+  top: 57.8%;
+  left: 21.5%;
+}
+
 .seattle {
 	top: 40.9%;
   left: 23.5%;
@@ -39,8 +44,8 @@
 }
 
 .sf {
-	top: 53.5%;
-  left: 20.3%;
+	top: 53%;
+  left: 19.8%;
 }
 
 .nyc {
