--- a/src/index.hbs
+++ b/src/index.hbs
@@ -39,9 +39,9 @@
 
         <p>I study <b class="colorful">mathematics</b> in the co-op program at the University of Waterloo. My focus is in combinatorics (counting things), optimization, statistics, and pure mathematics.</p>
 
-        <p>In the Fall I'll be a <b class="colorful">data science</b> intern at Facebook in the South Bay. Previously I've interned as a program manager at Microsoft, a mobile developer at Noom, and as a <b class="colorful">web developer</b> at Tagged (ifwe), and Bazaarvoice.</p>
+        <p>My studies and internships have taken me around the <b class="colorful">world</b>. I've studied abroad in Hong Kong. I've interned all over the US as a program manager and software engineer. Most recently I was in the South Bay analyzing <b class="colorful">data</b> at Instagram. I love travelling, trying new things, and meeting new people :)</p>
 
-        <p>My studies and internships have taken me around the <b class="colorful">world</b>. I've studied abroad in Hong Kong, and worked in Seattle, NYC, SF, and Austin.</p>
+        <p>I'm looking for a job! If you're interested in hiring a compelling data scientist with a curious mind and broad technical experience, check out my <b><a href="resume.pdf" target="_blank" alt="Résumé" class="rainbow">résumé</a></b> and <b><a href="mailto:{{email}}?subject=Hello!" class="rainbow">get in touch</a></b>.</p>
 
         <div class="map-container">
           <span class="dot rainbow menlopark"></span>
@@ -53,10 +53,6 @@
           <span class="dot rainbow waterloo"></span>
           {{> map}}
         </div>
-
-        <p>I love travelling to new places, trying new things, and making new friends.</p>
-
-        <h2><a href="mailto:{{email}}?subject=Hello!" class="rainbow">Come say hello :)</a></h2>
 
         <div class="menlopark-header date-img fade blank">
           <h2 class="date">Fall 2015 - Menlo Park</h2>
