--- a/src/index.hbs
+++ b/src/index.hbs
@@ -74,7 +74,7 @@
           <img class="lazy" data-src="images/seattle.jpg" src="images/blank.gif" alt="Seattle" />
         </div>
 
-        <p>I was interning at Microsoft as a program manager on the Xbox Live Services team. While there I helped design the Xbox Live experience of community managers and other high frequency users.</p>
+        <p>Last Winter I was a program manager at Xbox/Microsoft helping shepherd new features for the Activity Feed on Xbox Live. I also got a gamertag and realized that I am officially terrible at video games.</p>
 
         <ul>
           <li><a href="http://jomrcr.svbtle.com/notes-the-toyota-way" target="_blank" class="rainbow">Manufacturing</a></li>
@@ -88,7 +88,7 @@
           <img class="lazy" data-src="images/hk.jpg" src="images/blank.gif" alt="Hong Kong">
         </div>
 
-        <p>I was studying abroad at the Hong Kong University of Science and Technology, getting distracted by the panoramic vistas and mouthwatering dim sum.</p>
+        <p>I studied abroad at the Hong Kong University of Science and Technology, getting distracted by panoramic vistas and mouthwatering dim sum.</p>
 
         <ul>
           <li>Iced Milk Tea</li>
@@ -102,7 +102,7 @@
           <img class="lazy" data-src="images/nyc.jpg" src="images/blank.gif" alt="NYC">
         </div>
 
-        <p>I was interning at a tech startup in Chelsea called Noom that makes health conscious mobile apps. I was helping redesign the experience behind their core offering, a premium weight loss app for iOS and Android.</p>
+        <p>I interned at Noom Coach, a tech startup in Chelsea making health conscious mobile apps. I prototyped the "path" UX, and helped build the core data visualizations used in their premium weight loss app.</p>
 
         <ul>
           <li><a href="http://jomrcr.svbtle.com/product-debt" target="_blank" class="rainbow">Rapid prototyping</a></li>
@@ -116,7 +116,7 @@
           <img class="lazy" data-src="images/sf.jpg" src="images/blank.gif" alt="SF">
         </div>
 
-        <p>I was interning downtown as a web developer at the social networking company ifwe (formerly called Tagged). I focused on the front-end, helping build new features for Chat and Activity Feed.</p>
+        <p>I interned downtown at the social networking company Tagged (like a Myspace era version of Tinder). I was focusing on the front-end, helping update old features (Chat, Activity Feed) to new technologies (Ember, Angular).</p>
 
         <ul>
           <li><a href="http://jomrcr.svbtle.com/frankenblog" target="_blank" class="rainbow">Blogging</a></li>
@@ -130,7 +130,7 @@
           <img class="lazy" data-src="images/austin.jpg" src="images/blank.gif" alt="Austin">
         </div>
 
-        <p>My first internship was as a software engineer at Bazaarvoice, a SaaS company providing ratings and reviews for e-commerce websites. I was helping rebuild their back-end in Node.js, and ironing out accessibility requirements on the front-end.</p>
+        <p>My first internship was software engineering at Bazaarvoice, the SaaS company that handles ratings and reviews for most e-commerce websites. I was learning about JavaScript while helping rebuild their back-end in Node.js and ironing out accessibility requirements on the front-end.</p>
 
         <ul>
           <li><a href="https://github.com/joemercer/JavaScript-Interview-Prep" target="_blank" class="rainbow">JavaScript</a></li>
@@ -144,7 +144,7 @@
           <img class="lazy" data-src="images/waterloo.jpg" src="images/blank.gif" alt="Waterloo">
         </div>
 
-        <p>I entered the University of Waterloo in the Management Engineering program. I found the content interesting, but the approach trying, so I transferred to Mathematics and have since taken classes from a variety of callings including Computer Science, Statistics, Optimization, and Algebra.</p>
+        <p>I joined the University of Waterloo in the Management Engineering program. I found the content interesting, but the approach trying, so I transferred to Mathematics and have since taken classes from a variety of callings, including Computer Science, Combinatorics, Optimization, and Statistics.</p>
 
         <ul>
           <li>Homework</li>
@@ -166,10 +166,10 @@
 
         <p>I also share...</p>
         <ul>
-          <li>Moments on <a href="{{twitter}}" target="_blank" class="rainbow">Twitter</a></li>
-          <li>Thoughts on my <a href="http://jomrcr.svbtle.com/" target="_blank" class="rainbow">Blog</a></li>
-          <li>Process on <a href="https://github.com/joemercer/" target="_blank" class="rainbow">Github</a></li>
-          <li>Experiences on <a href="https://www.linkedin.com/in/jomrcr" target="_blank" class="rainbow">LinkedIn</a></li>
+          <li>Moments on <b><a href="https://www.instagram.com/jomrcr/" target="_blank" class="rainbow">Instagram</a></b></li>
+          <li>Thoughts on my <b><a href="http://jomrcr.svbtle.com/" target="_blank" class="rainbow">Blog</a></b></li>
+          <li>Process on <b><a href="https://github.com/joemercer/" target="_blank" class="rainbow">Github</a></b></li>
+          <li>Experiences on <b><a href="https://www.linkedin.com/in/jomrcr" target="_blank" class="rainbow">LinkedIn</a></b></li>
         </ul>
 
         <h4 class="copyright">Made with &#9829; in Seattle. &#169; 2015 Joe Mercer.</h4>
