--- a/src/styles/article.less
+++ b/src/styles/article.less
@@ -52,16 +52,18 @@ article, header, footer {
 	ul {
 	  list-style-type: disc;
 
+	  font-family: 'Ubuntu','Open Sans','Helvetica',sans-serif;
 		font-weight: 400;
 		font-size: 17px;
 	  line-height: 1.5;
 
-	  a {
-	  	font-size: 18px;
-	  }
+  	b {
+  		font-size: 19px;
+  	}
 
 	  color: @darkgrey;
 
+	  margin-top: -8px;
 		padding-left: @padding + 20px;
 	  padding-right: @padding;
 	}
