use american spelling of travelling

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -39,7 +39,7 @@
 
         <p>I study <b class="colorful">mathematics</b> in the co-op program at the University of Waterloo. My focus is in combinatorics (counting things), optimization, statistics, and pure mathematics.</p>
 
-        <p>My studies and internships have taken me around the <b class="colorful">world</b>. I've studied abroad in Hong Kong. I've interned all over the US as a program manager and software engineer. Most recently I was in the South Bay analyzing <b class="colorful">data</b> at Instagram. I love travelling, trying new things, and meeting new people :)</p>
+        <p>My studies and internships have taken me around the <b class="colorful">world</b>. I've studied abroad in Hong Kong. I've interned all over the US as a program manager and software engineer. Most recently I was in the South Bay analyzing <b class="colorful">data</b> at Instagram. I love traveling, trying new things, and meeting new people :)</p>
 
         <p>I'm looking for a job! If you're interested in hiring a compelling data scientist with a curious mind and broad technical experience, check out my <b><a href="resume.pdf" target="_blank" alt="Résumé" class="rainbow">résumé</a></b> and <b><a href="mailto:{{email}}?subject=Hello!" class="rainbow">get in touch</a></b>.</p>
 
